[tool.poetry]
name = "mlflowstack"
version = "0.1.0"
description = ""
authors = ["Burak Ince <burak.ince@linux.org.tr>"]

[tool.poetry.dependencies]
python = "3.9.*"
mlflow = {version = "2.10.0", extras = ["extras", "pipelines"]}
azure-storage-blob = "^12.11.0"
google-cloud-storage = "^2.2.1"
SQLAlchemy = "^1.4.35"
boto3 = "^1.34.28"
psycopg2-binary = "^2.9.9"
protobuf = "<5.0.0"
PyMySQL = "^1.0.2"
cryptography = "42.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
testcontainers = "^3.5.3"
requests = "^2.27.1"
cloudpickle = "^2.2.1"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
